test/fail_compilation/fail4375u.d
// 4375: Dangling else

static if (true)
    static if (false)
        struct G1 {}
else
    struct G2 {}

